--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
             all pre-disbursement conditions are met.</li>
         <li> Evaluating customers’ loan threshold by assessing their debt to income ratio to facilitate loan approval processes
             and determining risk and repayment capacity.</li> 
-        <li>Disbursement of 3,700+ loan facilities annually capturing all loan products availed in the company to the tune of 
-            about N2.16 billion.</li>
         <li>Developed a prompt disbursement approach that optimized the Turn Around Time by 30%.</li>
         <li>Ensuring that all credit approvals, KYC and all necessary documentations are put in place.</li>
         <li>Ensuring all transactions are in absolute compliance with the bank’s policies before they are sanctioned</li>
@@ -75,13 +73,8 @@
     <a href="./Contact Me.html">Contact me</a>
     <hr />
     <footer>
-        <p>cJoseph Boboye Inc 2024. All rights reserved</p>
+        <p>© Joseph Boboye Inc 2024. All rights reserved</p>
     </footer>
-
-
-
-    
-
     
 </body>
 </html>
