--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Joseph Boboye</h1>
     <p>+23481*****760 ||  +23491*****415</p>
-    <p><a href="https://myaccount.google.com/?utm_source=OGB&utm_medium=app&authuser=0">boboyejoseph04@gmail.com</a></p>
+    <p>boboyejoseph04@gmail.com</p>
     <img src="./My picture.jpg" height="200px" alt="My Profile Picture" />
     <hr />
     <h2>Professional Summary</h2>
